# gac

./: .gitignore  Makefile  README.md  grammar.js  tree-sitter.json  valgrind-out.txt
src/: CMakeLists.txt  algebra.cpp  algebra.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  grammar.json  iohelper.hpp  main.cpp  node-types.json  parser.c  parser.cpp  parser.hpp  ts_node_wrapper.hpp
test/: test.ga
